--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         </div>
     </footer>
 
-    <script src="website-content/js/navigation.js"></script>
+    <script src="website-content/js/navigation.js?v=6"></script>
 </body>
 </html>
